[package]
name = "receivetn"
version = "0.3.2"
authors = ["Tadej Obrstar <tadej.obrstar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "0.5" }
chrono = "0.4.10"
config = "0.10.1"
futures = "0.3.4"
regex = "1.3.4"
reqwest = { version = "0.10.1", features = ["blocking"] }
rss = { version = "1.9.0" }
tokio = { version = "0.2.11", features = ["macros"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
