[package]
name = "receivetn"
version = "0.4.3"
authors = ["Tadej Obrstar <tadej.obrstar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
chrono = "0.4.13"
config = "0.10.1"
futures = "0.3.5"
regex = "1.3.9"
reqwest = "0.10.7"
rss = "1.9.0"
structopt = "0.3.15"
tokio = { version = "0.2.22", features = ["macros"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
